tests/baselines/reference/subtypingWithStringIndexer4.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(11,7): error TS2416: Class 'B' incorrectly extends base class 'A':
  Index signatures are incompatible:
    Type 'string' is not assignable to type 'Derived':
      Property 'bar' is missing in type 'String'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(20,11): error TS2416: Class 'B' incorrectly extends base class 'A<Base>':
  Index signatures are incompatible:
    Type 'string' is not assignable to type 'Base':
      Property 'foo' is missing in type 'String'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(20,21): error TS2343: Type 'Base' does not satisfy the constraint 'Derived':
  Property 'bar' is missing in type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(24,11): error TS2416: Class 'B3<T>' incorrectly extends base class 'A<T>':
  Index signatures are incompatible:
    Type 'string' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts (4 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: string]: Derived;
    }
    
    class B extends A {
          ~
!!! error TS2416: Class 'B' incorrectly extends base class 'A':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'string' is not assignable to type 'Derived':
!!! error TS2416:       Property 'bar' is missing in type 'String'.
        [x: string]: string; // error
    }
    
    module Generics {
        class A<T extends Derived> {
            [x: string]: T;
        }
    
        class B extends A<Base> {
              ~
!!! error TS2416: Class 'B' incorrectly extends base class 'A<Base>':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'string' is not assignable to type 'Base':
!!! error TS2416:       Property 'foo' is missing in type 'String'.
                        ~~~~~~~
!!! error TS2343: Type 'Base' does not satisfy the constraint 'Derived':
!!! error TS2343:   Property 'bar' is missing in type 'Base'.
            [x: string]: string; // error
        }
    
        class B3<T extends Derived> extends A<T> {
              ~~
!!! error TS2416: Class 'B3<T>' incorrectly extends base class 'A<T>':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'string' is not assignable to type 'T'.
            [x: string]: string; // error
        }
    }